fixed issue of text overflowing in mobile admin navbar updated font and styling for better readability

--- a/src/app/styles/navbar/navbar.module.css
+++ b/src/app/styles/navbar/navbar.module.css
@@ -12,13 +12,17 @@
     align-items: center;
     height: 100%;
     position: relative;
+    font-family: "Lato";
+    font-weight: 600;
+    max-width: 100%;
 }
 
 .navbar {
     height: 60px;
     background-color: #2b2b33;
-    position: relative;
+    position: sticky;
     z-index: 9999;  
+    width: 100vw;
 }
 
 .nav_left {
@@ -69,7 +73,6 @@
 
 .nav_elements ul a {
     font-size: 16px;
-    font-weight: 400;
     color: #e0af48;
     text-decoration: none;   
 }
@@ -78,43 +81,37 @@
     text-decoration: underline;    
 }
 
+/*
 .nav_elements ul a.active {
     color: #574c4c;
-    font-weight: 500;
     position: relative;   
 }
 
-.nav_elements ul button {
-    font-size: 16px;
-    font-weight: 400;
-    color: #e0af48;
-    text-decoration: none;
-}
+
 
 .nav_elements ul button.active {
     color: #574c4c;
-    font-weight: 500;
     position: relative;
 }
 
+
  .nav_elements ul a.active::after {
-  content: "";
-  position: absolute;
-  bottom: -4px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #574c4c;
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #574c4c;
 } 
+*/
 
 .nav_right {
     color: #e0af48;
     padding-right: 1rem;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-shrink: 0;
     overflow: hidden;
+    justify-content: flex-end;
 }
 
 .nav_right ul {
@@ -168,7 +165,7 @@
         font-size: 12px;
     }
     .nav_right ul {
-        font-size: 12px;
+        font-size: 14px;
     }
 
 }
@@ -191,7 +188,7 @@
         position: absolute;
         top: 60px;
         background-color: #2b2b33;
-        height: 60vh;
+        height: 400px;
     }
     
 
@@ -207,25 +204,30 @@
         margin-top: 20px;
         text-align: left;       
     }
-    
+
     .nav_right {
         display: none;
     }
+    
     .nav_right.active {
         display: flex;
+        flex-direction: column;
         position: absolute;
-        top: 60vh;
-        left: 50px;   
+        height: 800px;
+        left: 50px;
+
     }
     
     .nav_right.active ul {
-        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+
     }
 
-    .nav_right.active ul li {
-        text-align: right;
-        margin-top: 5px;
-        margin-right: 10px; 
+    .nav_right.active ul li p {
+        text-align: left;
+        font-size: 14px;
+
     }
     
     .menu_icon.active {
